[package]
name = "node-discover"
version = "0.2.0"
edition = "2018"
description = "Discover nodes in cloud environments"
license = "MIT"
repository = "https://github.com/fmeringdal/node-discover"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
thiserror = "1.0.29"
log = "0.4.14"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
rusoto_core = { version = "0.47.0", optional = true }
rusoto_ec2 = { version = "0.47.0", optional = true }


[features]
aws = ["rusoto_core", "rusoto_ec2"]
digitalocean = []
full = ["aws", "digitalocean"]
# default = ["full"]


[lib]
name = "node_discover"
path = "src/lib.rs"

[[bin]]
name = "node-discover"
path = "src/bin.rs"
